force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>