force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <label>ABN</label>
    <type>Text</type>
    <length>14</length>
</CustomField>