force-app/main/default/objects/Account/fields/Account_Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Company__c</fullName>
    <label>Account Owner Company</label>
    <type>Text</type>
    <length>1300</length>
    <formula>Owner.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>