force-app/main/default/objects/Account/fields/Account_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Division__c</fullName>
    <label>Account Owner Division</label>
    <type>Text</type>
    <length>1300</length>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>