force-app/main/default/objects/Account/fields/Account_Owner_isActive__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_isActive__c</fullName>
    <label>Account Owner isActive</label>
    <type>Checkbox</type>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>