force-app/main/default/objects/Account/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <label>Account Owner Name</label>
    <type>Text</type>
    <length>1300</length>
    <formula>Owner.FirstName &amp; " " &amp;  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>