force-app/main/default/objects/Account/fields/ADR_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>ADR_Account_Id__c</fullName>
    <label>ADR Account Id</label>
    <type>Text</type>
    <length>10</length>
</CustomField>