force-app/main/default/objects/Account/fields/BDS_1__c.field-meta.xml
<CustomField>
    <fullName>BDS_1__c</fullName>
    <label>BDS 1</label>
    <type>Checkbox</type>
</CustomField>