force-app/main/default/objects/Account/fields/BDS_2__c.field-meta.xml
<CustomField>
    <fullName>BDS_2__c</fullName>
    <label>BDS 2</label>
    <type>Checkbox</type>
    <inlineHelpText>For Administrative tagging purposes</inlineHelpText>
</CustomField>