force-app/main/default/objects/Account/fields/Chairman_s_Choice_List__c.field-meta.xml
<CustomField>
    <fullName>Chairman_s_Choice_List__c</fullName>
    <label>Chairman's Choice List</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>