force-app/main/default/objects/Account/fields/Chairmans_Choice__c.field-meta.xml
<CustomField>
    <fullName>Chairmans_Choice__c</fullName>
    <label>Chairman's Choice</label>
    <type>Checkbox</type>
</CustomField>