force-app/main/default/objects/Account/fields/Client_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Client_Infrastructure__c</fullName>
    <label>Client Infrastructure</label>
    <type>MultiselectPicklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>