force-app/main/default/objects/Account/fields/Cross_Sell_Potential__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Potential__c</fullName>
    <label>Cross Sell Potential?</label>
    <type>Checkbox</type>
</CustomField>