force-app/main/default/objects/Account/fields/CSAT_Ability_Compared_to_Competitors__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Ability_Compared_to_Competitors__c</fullName>
    <label>Ability Compared to Competitors</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>