force-app/main/default/objects/Account/fields/CSAT_Ability_to_Meet_Requirements__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Ability_to_Meet_Requirements__c</fullName>
    <label>Ability to Meet Requirements</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>