force-app/main/default/objects/Account/fields/CSAT_Date_of_Survey__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Date_of_Survey__c</fullName>
    <label>Date of Survey</label>
    <type>Date</type>
</CustomField>