force-app/main/default/objects/Account/fields/CSAT_Person_Conducting_Survey__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Person_Conducting_Survey__c</fullName>
    <label>Person Conducting Survey/Interview</label>
    <type>Text</type>
    <length>30</length>
</CustomField>