force-app/main/default/objects/Account/fields/CSAT_Quality_of_Services__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Quality_of_Services__c</fullName>
    <label>Quality of Services</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>