force-app/main/default/objects/Account/fields/CSAT_Satisfaction_Comments_and__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Satisfaction_Comments_and__c</fullName>
    <label>Satisfaction Comments and</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>