force-app/main/default/objects/Account/fields/CSAT_Solution_Portfolio_Value__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Solution_Portfolio_Value__c</fullName>
    <label>Solution Portfolio &amp; Value</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>