force-app/main/default/objects/Account/fields/CSAT_Survey_Respond__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Respond__c</fullName>
    <label>Survey/Interview Respondent</label>
    <type>Text</type>
    <length>30</length>
</CustomField>