force-app/main/default/objects/Account/fields/CSAT_Survey_Respondent_Title__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Respondent_Title__c</fullName>
    <label>Survey/Interview Respondent Title</label>
    <type>Text</type>
    <length>30</length>
</CustomField>