force-app/main/default/objects/Account/fields/D_U_N_S__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S__c</fullName>
    <label>D_U_N_S Number</label>
    <type>Text</type>
    <externalId>true</externalId>
    <length>20</length>
</CustomField>