force-app/main/default/objects/Account/fields/Days_since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Activity__c</fullName>
    <label>Days since Last Activity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>DATEVALUE(NOW()) - LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>