force-app/main/default/objects/Account/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>