force-app/main/default/objects/Account/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <label>Fiscal Year End</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>