force-app/main/default/objects/Account/fields/IBM_Customer_No_del__c.field-meta.xml
<CustomField>
    <fullName>IBM_Customer_No_del__c</fullName>
    <label>IBM Customer No</label>
    <type>Text</type>
    <length>10</length>
</CustomField>