force-app/main/default/objects/Account/fields/IBM_Passport_Advantage_No__c.field-meta.xml
<CustomField>
    <fullName>IBM_Passport_Advantage_No__c</fullName>
    <label>IBM Passport Advantage No</label>
    <type>Text</type>
    <length>20</length>
</CustomField>