force-app/main/default/objects/Account/fields/ICT_Department__c.field-meta.xml
<CustomField>
    <fullName>ICT_Department__c</fullName>
    <label>ICT Department</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>