force-app/main/default/objects/Account/fields/Introduced_By__c.field-meta.xml
<CustomField>
    <fullName>Introduced_By__c</fullName>
    <label>Introduced By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Introduced_By__r</relationshipName>
</CustomField>