force-app/main/default/objects/Account/fields/IsMeridian__c.field-meta.xml
<CustomField>
    <fullName>IsMeridian__c</fullName>
    <label>Account Is Meridian</label>
    <type>Checkbox</type>
</CustomField>