force-app/main/default/objects/Account/fields/ISV__c.field-meta.xml
<CustomField>
    <fullName>ISV__c</fullName>
    <label>ISV</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>