force-app/main/default/objects/Account/fields/Lease_or_Buy__c.field-meta.xml
<CustomField>
    <fullName>Lease_or_Buy__c</fullName>
    <label>Lease or Buy</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>