force-app/main/default/objects/Account/fields/Likelihood_to_Purchase_Again__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Purchase_Again__c</fullName>
    <label>Likelihood to Purchase Again</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>