force-app/main/default/objects/Account/fields/MAS_Number__c.field-meta.xml
<CustomField>
    <fullName>MAS_Number__c</fullName>
    <label>MAS #</label>
    <type>Text</type>
    <length>20</length>
</CustomField>