force-app/main/default/objects/Account/fields/Master_Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Lease_Date__c</fullName>
    <label>Master Lease Date</label>
    <type>Date</type>
</CustomField>