force-app/main/default/objects/Account/fields/Meridian_Practice__c.field-meta.xml
<CustomField>
    <fullName>Meridian_Practice__c</fullName>
    <label>Meridian Practice</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>