force-app/main/default/objects/Account/fields/MLC_Cust__c.field-meta.xml
<CustomField>
    <fullName>MLC_Cust__c</fullName>
    <label>MLC Cust#</label>
    <type>Text</type>
    <length>20</length>
</CustomField>