force-app/main/default/objects/Account/fields/Outsource_Contract_End_Date_MITL__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Contract_End_Date_MITL__c</fullName>
    <label>Outsource Contract End Date</label>
    <type>Date</type>
</CustomField>