force-app/main/default/objects/Account/fields/Outsource_Host_Country_MITL__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Host_Country_MITL__c</fullName>
    <label>Outsource Host Country</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>