force-app/main/default/objects/Account/fields/Outsourced_MITL__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_MITL__c</fullName>
    <label>Outsourced</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted></valueSet>
</CustomField>