force-app/main/default/objects/Account/fields/Request_Access_Comments__c.field-meta.xml
<CustomField>
    <fullName>Request_Access_Comments__c</fullName>
    <label>Request Access Comments</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>