force-app/main/default/objects/Account/fields/Sandbox_Id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Id__c</fullName>
    <label>Sandbox Id</label>
    <type>Text</type>
    <length>20</length>
</CustomField>