force-app/main/default/objects/Account/fields/SAP_Account_Number_del__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Number_del__c</fullName>
    <label>SAP Account Number</label>
    <type>Text</type>
    <length>5</length>
</CustomField>