force-app/main/default/objects/Account/fields/Secured_10__c.field-meta.xml
<CustomField>
    <fullName>Secured_10__c</fullName>
    <label>Lessor 10</label>
    <type>Text</type>
    <length>100</length>
</CustomField>