force-app/main/default/objects/Account/fields/Secured_1__c.field-meta.xml
<CustomField>
    <fullName>Secured_1__c</fullName>
    <label>Lessor 1</label>
    <type>Text</type>
    <length>100</length>
</CustomField>