force-app/main/default/objects/Account/fields/Secured_2__c.field-meta.xml
<CustomField>
    <fullName>Secured_2__c</fullName>
    <label>Lessor 2</label>
    <type>Text</type>
    <length>100</length>
</CustomField>