force-app/main/default/objects/Account/fields/SIC_Industry_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Industry_Description__c</fullName>
    <label>SIC Industry Description</label>
    <type>Text</type>
    <length>1300</length>
    <formula>IF(LEFT(Sic, 1)= "0", "Agriculture", IF(LEFT(Sic, 1)= "9", "Government", "Services"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>