force-app/main/default/objects/Account/recordTypes/MITHK.recordType-meta.xml
<RecordType>
    <fullName>MITHK</fullName>
    <active>true</active>
    <label>MITHK</label>
</RecordType>