force-app/main/default/objects/Account/recordTypes/MITI.recordType-meta.xml
<RecordType>
    <fullName>MITI</fullName>
    <active>true</active>
    <label>MITI</label>
</RecordType>