force-app/main/default/objects/Account/recordTypes/MITMY.recordType-meta.xml
<RecordType>
    <fullName>MITMY</fullName>
    <active>true</active>
    <label>MITMY</label>
</RecordType>