force-app/main/default/objects/Account/recordTypes/MITUS_Partner.recordType-meta.xml
<RecordType>
    <fullName>MITUS_Partner</fullName>
    <active>true</active>
    <label>MITUS Partner</label>
</RecordType>