force-app/main/default/objects/Account/recordTypes/MITUS_Prospect.recordType-meta.xml
<RecordType>
    <fullName>MITUS_Prospect</fullName>
    <active>true</active>
    <label>MITUS Prospect</label>
</RecordType>