force-app/main/default/objects/Account/recordTypes/MLC.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>MLC record type for Account</description>
    <fullName>MLC</fullName>
    <label>MLC</label>
</RecordType>