force-app/main/default/objects/Account/recordTypes/MLC_Competitor.recordType-meta.xml
<RecordType>
    <fullName>MLC_Competitor</fullName>
    <active>true</active>
    <label>MLC Competitor</label>
</RecordType>