force-app/main/default/objects/Account/recordTypes/MLC_Customer.recordType-meta.xml
<RecordType>
    <fullName>MLC_Customer</fullName>
    <active>true</active>
    <label>MLC Customer</label>
</RecordType>