force-app/main/default/objects/Account/recordTypes/MLC_Partner.recordType-meta.xml
<RecordType>
    <fullName>MLC_Partner</fullName>
    <active>true</active>
    <label>MLC Partner</label>
</RecordType>