force-app/main/default/objects/Account/recordTypes/MLC_Prospect.recordType-meta.xml
<RecordType>
    <fullName>MLC_Prospect</fullName>
    <active>true</active>
    <label>MLC Prospect</label>
</RecordType>