force-app/main/default/objects/Account/recordTypes/MLC_Secured_Party.recordType-meta.xml
<RecordType>
    <fullName>MLC_Secured_Party</fullName>
    <active>true</active>
    <label>MLC Secured Party</label>
</RecordType>