force-app/main/default/objects/Account/recordTypes/MLC_Supplier.recordType-meta.xml
<RecordType>
    <fullName>MLC_Supplier</fullName>
    <active>true</active>
    <label>MLC Supplier</label>
</RecordType>