force-app/main/default/objects/Account/recordTypes/PartnerVendor.recordType-meta.xml
<RecordType>
    <fullName>PartnerVendor</fullName>
    <active>true</active>
    <label>Partner / Vendor</label>
</RecordType>