force-app/main/default/objects/Account/recordTypes/Singapore.recordType-meta.xml
<RecordType>
    <fullName>Singapore</fullName>
    <active>true</active>
    <label>MITS</label>
</RecordType>