force-app/main/default/objects/Account/recordTypes/Tardis.recordType-meta.xml
<RecordType>
    <fullName>Tardis</fullName>
    <active>true</active>
    <label>MITA</label>
</RecordType>